Removed horizontal scrolling in desktop view of recitation page and fixed alignment of reciter name in mobile view.

--- a/src/containers/Qari/style.scss
+++ b/src/containers/Qari/style.scss
@@ -7,8 +7,6 @@
   color: #ffffff;
   padding-bottom: 5rem;
   background-color: $brand-primary;
-  margin-left: -15px;
-  margin-right: -15px;
   margin-bottom: 20px;
   @include mobile() {
       min-height: 350px;
